// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render Page with default props 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <span
          class="icon"
        />
        <span
          class="text"
        >
          Quiz
        </span>
      </button>
      <div
        class="side"
      />
    </div>
    <div
      class="content fullWidth centerAlign"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`should render Page with header 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <span
          class="icon"
        />
        <span
          class="text"
        >
          Quiz
        </span>
      </button>
      <div
        class="side"
      >
        <a
          href="#"
        >
          Link1
        </a>
        <a
          href="#"
        >
          Link2
        </a>
      </div>
    </div>
    <div
      class="content fullWidth centerAlign"
    >
      Content
    </div>
  </div>
</div>
`;
